--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1>IANOH BANKING SYSTEM</h2>
     <div id="app">
       <h1>Bank Customers</h1>
-      <div id="customers"></div>
-      <div id="customer-details"></div>
-      <div id="transfer-form"></div>
+    <p> Select a user to transfer money to!</P>
+      <div class="customers" id="customers"></div>
+      <div class="customers-details" id="customer-details"></div>
+      <div class="transfer-form" id="transfer-form"></div>
     </div>
     <script>
       document.addEventListener("DOMContentLoaded", () => {
